[FIX] Custom fields wrap to new line

--- a/packages/rocketchat-theme/client/imports/general/forms.css
+++ b/packages/rocketchat-theme/client/imports/general/forms.css
@@ -192,6 +192,7 @@
 .rc-grid {
 	display: flex;
 	align-items: flex-start;
+	flex-flow: row wrap;
 }
 
 .rc-w50 {
